# high_speed_deployment

./: README.md
Additional_files/: clean_data_redundancy.py  data_cleaner.py  filtering_data.py  from_bag_to_csv.py  script_to_add_time.py
RotorS_Ideal/: .rosinstall.bak
RotorS_Ideal/.catkin_tools/profiles/default/: devel_collisions.txt
RotorS_Ideal/src/: .rosinstall  .rosinstall.bak
RotorS_Ideal/src/rotors_simulator/csv_generator/: import_csv.py  setup.py
RotorS_Ideal/src/rotors_simulator/csv_generator/csv_generator.egg-info/: PKG-INFO  SOURCES.txt
RotorS_Ideal/src/rotors_simulator/matlab_msg_gen_ros1/glnxa64/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
RotorS_Ideal/src/rotors_simulator/matlab_msg_gen_ros1/glnxa64/install/: setup.sh
RotorS_Ideal/src/rotors_simulator/matlab_msg_gen_ros1/glnxa64/src/: CMakeLists.txt  VersionInfo.mat
RotorS_Ideal/src/rotors_simulator/matlab_msg_gen_ros1/glnxa64/src/rotors_comm/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
RotorS_Ideal/src/rotors_simulator/matlab_msg_gen_ros1/glnxa64/src/rotors_comm/include/rotors_comm/: visibility_control.h
RotorS_Ideal/src/rotors_simulator/matlab_msg_gen_ros1/glnxa64/src/rotors_comm/m/+ros/+internal/+ros/+custommessages/+rotors_comm/: octomapRequest.m  performanceMetricsRequest.m  recordRosbagRequest.m  reset_simulationRequest.m  reset_simulationResponse.m  start_simulationResponse.m  stop_simulationRequest.m  stop_simulationResponse.m
RotorS_Ideal/src/rotors_simulator/matlab_msg_gen_ros1/glnxa64/src/rotors_comm/m/+ros/+msggen/+rotors_comm/: PerformanceMetricsResponse.m  stop_simulationRequest.m  stop_simulationResponse.m
RotorS_Ideal/src/rotors_simulator/matlab_msg_gen_ros1/glnxa64/src/rotors_comm/src/: rotors_comm_Octomap_service.cpp  rotors_comm_PerformanceMetrics_service.cpp  rotors_comm_RecordRosbag_service.cpp  rotors_comm_WindSpeed_message.cpp  rotors_comm_reset_simulation_service.cpp  rotors_comm_start_simulation_service.cpp  rotors_comm_stop_simulation_service.cpp
RotorS_Ideal/src/rotors_simulator/rotors_comm/: CMakeLists.txt
RotorS_Ideal/src/rotors_simulator/rotors_comm/srv/: PerformanceMetrics.srv  StartDataSaverNode.srv
RotorS_Ideal/src/rotors_simulator/rotors_control/: CMakeLists.txt
RotorS_Ideal/src/rotors_simulator/rotors_control/src/: Gain_scheduled_controller.py  Hybrid_controller.py  Lee_decoupled_controller.py  Lee_decoupled_controller_evolution.py  Lee_position_controller.py  Lee_position_controller_evolution.py  Lee_position_controller_with_profiler.py  QuaternionBased_Spherical_SMC.py
RotorS_Ideal/src/rotors_simulator/rotors_description/urdf/: multirotor_base.xacro
RotorS_Ideal/src/rotors_simulator/rotors_evaluation/: CMakeLists.txt
RotorS_Ideal/src/rotors_simulator/rotors_evaluation/src/: data_saver.py  genetic_optimizer.py  multiple_ABC_optimizer.py  multiple_genetic_optimizer.py
RotorS_Ideal/src/rotors_simulator/rotors_gazebo/: CMakeLists.txt  package.xml
RotorS_Ideal/src/rotors_simulator/rotors_gazebo/launch/: control.launch  data_saver_node.launch  empty_world.launch  mav.launch  mav_hovering_example.launch  mav_hovering_example_base.launch  multiple_control.launch  multiple_data_saver_node.launch  multiple_drones.launch  spawn_mav.launch
RotorS_Ideal/src/rotors_simulator/rotors_gazebo/resource/: lee_controller_pelican_for_tuning.yaml  lee_controller_pelican_for_tuning_1.yaml  lee_controller_pelican_for_tuning_2.yaml  lee_controller_pelican_for_tuning_3.yaml  lee_controller_pelican_for_tuning_4.yaml
RotorS_Ideal/src/rotors_simulator/rotors_gazebo/scripts/: evaluate_population.py  set_initial_velocity_node.py
RotorS_Ideal/src/rotors_simulator/rotors_gazebo/src/: hovering_example.py  hovering_example_IMU.cpp  hovering_example_OD.cpp  hovering_example_base.cpp  multiple_simulation_control_node.py  simulation_control_node.py  tmux_ros.py
RotorS_Ideal/src/rotors_simulator/rotors_gazebo_plugins/: CMakeLists.txt
RotorS_Ideal/src/rotors_simulator/rotors_gazebo_plugins/src/: SetLinkVelocityPlugin.cpp
RotorS_Real/.catkin_tools/profiles/default/: devel_collisions.txt
RotorS_Real/src/: .rosinstall  .rosinstall.bak
RotorS_Real/src/ethzasl_msf/msf_core/include/msf_core/: msf_sensorhandler.h  msf_sortedContainer.h
RotorS_Real/src/rotors_simulator/rotors_comm/: CMakeLists.txt  package.xml
RotorS_Real/src/rotors_simulator/rotors_comm/srv/: SetInitialVelocities.srv
RotorS_Real/src/rotors_simulator/rotors_control/: CMakeLists.txt
RotorS_Real/src/rotors_simulator/rotors_control/src/: Gain_scheduled_controller.py  Hybrid_controller.py  Lee_decoupled_controller.py  Lee_decoupled_controller_evolution.py  Lee_position_controller.py  Lee_position_controller_evolution.py  QuaternionBased_Spherical_SMC.py
RotorS_Real/src/rotors_simulator/rotors_description/urdf/: multirotor_base.xacro  pelican_generic_pose_sensor.gazebo
RotorS_Real/src/rotors_simulator/rotors_evaluation/: CMakeLists.txt
RotorS_Real/src/rotors_simulator/rotors_evaluation/src/: data_saver.py  data_saver_old.py  genetic_optimizer.py
RotorS_Real/src/rotors_simulator/rotors_gazebo/: CMakeLists.txt  package.xml
RotorS_Real/src/rotors_simulator/rotors_gazebo/launch/: control.launch  data_saver_node.launch  mav_hovering_example.launch  spawn_mav.launch
RotorS_Real/src/rotors_simulator/rotors_gazebo/resource/: lee_controller_pelican_for_tuning.yaml  lee_controller_pelican_for_tuning_2.yaml  lee_controller_pelican_for_tuning_4.yaml  lee_controller_pelican_for_tuning_5.yaml
RotorS_Real/src/rotors_simulator/rotors_gazebo/scripts/: set_initial_velocity_node.py  set_velocity_client.py
RotorS_Real/src/rotors_simulator/rotors_gazebo/src/: hovering_example.py  simulation_control_node.py
RotorS_Real/src/rotors_simulator/rotors_gazebo_plugins/: CMakeLists.txt
RotorS_Real/src/rotors_simulator/rotors_gazebo_plugins/src/: SetLinkVelocityPlugin.cpp
RotorS_Real/src/rotors_simulator_demos/: CMakeLists.txt
RotorS_Real/src/rotors_simulator_demos/launch/: mav_hovering_example_msf.launch
RotorS_Real/src/rotors_simulator_demos/src/: hovering_example_msf.py  mav_msf.py
(+37 files in other folders)
